# ml_learning

./: .gitignore  main.py  pyproject.toml
data_visualization/: Bivariate.ipynb  Univariate.ipynb  dataexplore.ipynb  pandas_profiling.ipynb
