[project]
name = "diabetes-detection"
version = "0.1.0"
description = "this is my first machine learning project using sklearn and fastapi"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]
